# Django-Project

./: .gitignore  .pdm.toml  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_compra.py  0004_itenscompra.py  0004_livro_categoria_livro_editora.py  0005_livro_autores.py  0006_alter_livro_autores.py  0007_alter_livro_preco.py
livraria/models/: autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  editora.py  livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
